--- a/HJCS.SageAssessment.Client/Views/Home/Contact.cshtml
+++ b/HJCS.SageAssessment.Client/Views/Home/Contact.cshtml
@@ -1,17 +1,16 @@
 ﻿@{
     ViewData["Title"] = "Contact";
 }
-<h2>@ViewData["Title"].</h2>
+<h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Lope de Vega 14-16<br />
+    Barcelona, 08005<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    +34 618 43 24 98
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong> <a href="mailto:javier.castillosuazo@gmail.com">javier.castillosuazo@gmail.com</a>
 </address>
