--- a/HJCS.SageAssessment.Client/Views/Home/Index.cshtml
+++ b/HJCS.SageAssessment.Client/Views/Home/Index.cshtml
@@ -8,26 +8,64 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<div class="row">
-    <div class="col-md-2"><strong>@Html.DisplayNameFor(model => model.Number)</strong></div>
-    <div class="col-md-2"><strong>@Html.DisplayNameFor(model => model.Date)</strong></div>
-    <div class="col-md-2"><strong>@Html.DisplayNameFor(model => model.Customer)</strong></div>
-    <div class="col-md-2"><strong>@Html.DisplayNameFor(model => model.Description)</strong></div>
-    <div class="col-md-1"><strong>@Html.DisplayNameFor(model => model.Amount)</strong></div>
-    <div class="col-md-2"><strong>@Html.DisplayNameFor(model => model.Status)</strong></div>
-    <div class="col-md-1"></div>
-</div>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Number)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Customer)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Amount)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Status)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
 @foreach (var invoice in Model)
 {
-<div class="row">
-    <div class="col-md-2">@Html.DisplayFor(model => invoice.Number)</div>
-    <div class="col-md-2">@Html.DisplayFor(model => invoice.Date)</div>
-    <div class="col-md-2">@Html.DisplayFor(model => invoice.Customer.FullName)</div>
-    <div class="col-md-2">@Html.DisplayFor(model => invoice.Description)</div>
-    <div class="col-md-1">@Html.DisplayFor(model => invoice.Amount)</div>
-    <div class="col-md-2">@Html.DisplayFor(model => invoice.Status)</div>
-    <div class="col-md-1">
-        <a asp-action="Edit" asp-route-id="@invoice.Id">Edit</a>
-    </div>
-</div>
+    <tr>
+        <td>
+            @Html.DisplayFor(model => invoice.Number)
+        </td>
+        <td>
+            @Html.DisplayFor(model => invoice.Date)
+        </td>
+        <td>
+            @Html.DisplayFor(model => invoice.Customer.FullName)
+        </td>
+        <td>
+            @Html.DisplayFor(model => invoice.Description)
+        </td>
+        <td>
+            @Html.DisplayFor(model => invoice.Amount)
+        </td>
+        <td>
+            @Html.DisplayFor(model => invoice.Status)
+        </td>
+        <td>
+            <a asp-action="Edit" asp-route-id="@invoice.Id">Edit</a>
+        </td>
+    </tr>
 }
+    </tbody>
+    <tfoot class="@(Model.Any() ? "" : "hidden")">
+        <tr>
+            <td colspan="4"></td>
+            <td><strong>@Model.Sum(t => t.Amount)</strong></td>
+            <td colspan="2"></td>
+        </tr>
+    </tfoot>
+</table>
