--- a/HJCS.SageAssessment.Client/Views/Home/Edit.cshtml
+++ b/HJCS.SageAssessment.Client/Views/Home/Edit.cshtml
@@ -1,4 +1,4 @@
-@model HJCS.SageAssessment.ClientMVC.Models.Invoice
+@model HJCS.SageAssessment.ClientMVC.Models.ViewModels.InvoiceEdition
 
 @{
     ViewData["Title"] = "Edit";
@@ -42,15 +42,15 @@
         <div class="form-group">
             <label asp-for="Status" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Status" class="form-control" />
+                <select asp-for="Status" asp-items="Model.StatusList" class="form-control" ></select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="CustomerId" class="col-md-2 control-label"></label>
+            <label asp-for="Customer" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="CustomerId" class="form-control" readonly />
-                <span asp-validation-for="CustomerId" class="text-danger"></span>
+                <input asp-for="Customer" class="form-control" readonly />
+                <span asp-validation-for="Customer" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
