--- a/HJCS.SageAssessment.Client/Views/Home/Index.cshtml
+++ b/HJCS.SageAssessment.Client/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <a asp-action="Create">Create New</a>
 </p>
 
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>
@@ -64,7 +64,7 @@
     <tfoot class="@(Model.Any() ? "" : "hidden")">
         <tr>
             <td colspan="4"></td>
-            <td><strong>@Model.Sum(t => t.Amount)</strong></td>
+            <td><strong>@string.Format("{0:C}", Model.Sum(t => t.Amount))</strong></td>
             <td colspan="2"></td>
         </tr>
     </tfoot>
